--- a/.eslintrc
+++ b/.eslintrc
@@ -1,11 +1,9 @@
 {
     "env": {
-        "browser": true,
-        "es2021": true
+        "browser": true
     },
     "extends": [
-        "plugin:react/recommended",
-        "standard"
+        "plugin:react/recommended"
     ],
     "parserOptions": {
         "ecmaFeatures": {
@@ -19,11 +17,11 @@
     ],
     "rules": {
         "semi": [
-            2,
+            "error",
             "always"
         ],
         "indent": [
-            0,
+            "error",
             4
         ],
         "space-before-function-paren": [
