--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-select": "^5.7.4",
     "require": "^2.4.20",
     "web-vitals": "^2.1.4",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "yup": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
