--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "react-select": "^5.7.4",
     "require": "^2.4.20",
     "web-vitals": "^2.1.4",
-    "xlsx": "^0.18.5",
-    "yup": "^1.2.0"
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
